Add BooksRepsonseDTO and LibraryResponseDTO